fixed previous test, fixed getting fields for select